k8s/shared/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pulse-route
  namespace: default

spec:
  parentRefs:
    - name: pulse-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/users
      backendRefs:
        - name: user-service
          port: 8081
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/posts
      backendRefs:
        - name: post-service
          port: 8082
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/notifications
      backendRefs:
        - name: notification-service
          port: 8083
